--- a/main/templates/template.html
+++ b/main/templates/template.html
@@ -42,6 +42,11 @@
                 <div class="navbar_menu_dropdown_item">
                   <a href="{% url 'mypage' %}">내정보</a>
                 </div>
+                {% if is_writer == "작가" %}
+                  <div class="navbar_menu_dropdown_item">
+                    <a href="{% url 'writer_info' id %}">작가정보</a>
+                  </div>
+                {% endif %}
                 <div class="navbar_menu_dropdown_item">
                   <a href="{% url 'logout' %}">나가기</a>
                 </div>
