--- a/write/templates/detail.html
+++ b/write/templates/detail.html
@@ -1,34 +1,49 @@
-<h1> this is 상세 page</h1>
+{% extends 'template.html' %}
+{% load static %}
 
-<a href="{%url 'delete' post.id %}">삭제하기</a>
-<a href="{%url 'edit' post.id %}">수정하기</a>
+{% block style %}
+    <link rel="stylesheet" href="{% static 'css/detail.css' %}" type="text/css" />
+{% endblock %}
 
+{% block content %}
+    <div class="element">
+        <div class="top_menu">
+            <button type="button" onclick="location" a href="{%url 'delete' post.id %}">수정하기</button>
+            <button type="button" onclick="location" a href="{%url 'edit' post.id %}">삭제하기</button>
+        </div>
+        <center>
+            <div class="post">
+                <div class="title">제목: {{post.title}}</div>
+                <div class="date">날짜: {{post.pub_data}}</div>
+                <div class="body">내용: {{post.content}}</div>
+            </div>
+        </center>
+        <br>
+        <center>
 
+                <h1> 총 {{post.comment_set.count}}개의 댓글 </h1>
 
-<div>제목: {{post.title}}</div>
-<div>날짜: {{post.pub_data}}</div>
-<div>내용: {{post.content}}</div>
-
-
-<br><br><br><br><br><br>
-
-총 {{post.comment_set.count}}개의 댓글
-<!-- 템플릿 태그 옆에 }하는 것을 필터라고 함. 말 그랟로 필터 -->
-
-{% for comment in comments %}
-    
-    <div>{{comment.pub_date}}</div>
-    <div>{{comment.content}}</div>
-    <hr>
-
-{% endfor %} 
-
-<form method="POST" action="{% url 'comment' post.id %}">
-    <!-- comment가 어디포스트에 해당하는지 모르기떄문에 post.id.해줘야함... -->
-    {% csrf_token %}
-    <textarea name="content" id="" cols="30" rows="10"></textarea>
-    <input type="submit">
-    <!-- 이것은 <button type="submit">과 같다. 실은 버튼의 기본 속성이 submit. 만약 type="button"하면 아무 일도 일어나지 않음 -->
-</form>
+            <div class="comment">
 
 
+                {% for comment in comments %}
+
+                <div>{{comment.pub_date}}</div>
+                <div>{{comment.content}}</div>
+                <hr>
+            </div>
+        </center>
+        {% endfor %}
+
+        <center>
+        <h1> 당신의 의견이 궁금해요! </h1>
+            <form method="POST" action="{% url 'comment' post.id %}">
+                <!-- comment가 어디포스트에 해당하는지 모르기떄문에 post.id.해줘야함... -->
+                {% csrf_token %}
+                <textarea name="content" id="" ></textarea>
+                <!-- 이것은 <button type="submit">과 같다. 실은 버튼의 기본 속성이 submit. 만약 type="button"하면 아무 일도 일어나지 않음 -->
+            </form>
+
+        </center>
+    </div>
+{% endblock %}
